# jarvis-system

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  main.py  requirements.txt
backend/agents/: bobby.py  eva.py  sarah.py  scout.py  tom.py
backend/core/: agent_base.py  models.py  orchestrator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AgentPanel.jsx  CommandInput.jsx  CoreVisualizer.jsx  Header.jsx  RightPanel.jsx  SystemVitals.jsx  TelemetryLog.jsx
frontend/src/styles/: globals.css
frontend/src/utils/: websocket.js
